testing/macro-tests/tests/ui/index_reserved_namespace.stderr
error: index name '~UiIndexedEntity|id' uses reserved '~' namespace
  --> tests/ui/index_reserved_namespace.rs:19:20
   |
19 |     index(fields = "id"),
   |                    ^^^^
